Step 1 - Create project structure -> archunit-junit as parent for common code, archunit-junit4 and archunit-junit5 as children adding JUnit version specific code.
Issue: #34
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>